--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,15 @@ version = "0.1.0"
 description = "Let you manage your aws resources easier."
 authors = ["Yingbo Gu <tensiongyb@gmail.com>"]
 license = "MIT"
-readme = "README.md"
-homepage = "https://github.com/guyingbo/aws-helper"
-source = [
-    { include = "helper.py" },
-]
 
 [tool.poetry.dependencies]
-python = "*"
-aioboto3 = "^4.0"
-pandas = "^0.23.1"
-click = "^6.7"
+python = "^3.7"
+aioboto3 = "^8.0.3"
+pandas = "^1.0.4"
+typer = "^0.2.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^3.5"
+
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
